--- a/package.json
+++ b/package.json
@@ -1,48 +1,36 @@
 {
-  "name": "jquery-boilerplate",
-  "version": "3.5.0",
-  "description": "A jump-start for jQuery plugins development.",
+  "name": "jquery-tocanvas",
+  "version": "0.0.0",
+  "description": "",
   "keywords": [
     "jquery-plugin",
     "jquery",
-    "boilerplate",
     "plugins"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jquery-boilerplate/jquery-boilerplate.git"
+    "url": "https://github.com/SeeDoubleYou/jquery-tocanvas"
   },
   "bugs": {
-    "url": "https://github.com/jquery-boilerplate/jquery-boilerplate/issues"
+    "url": "https://github.com/SeeDoubleYou/jquery-tocanvas/issues"
   },
   "author": {
-    "name": "Zeno Rocha",
-    "email": "zno.rocha@gmail.com",
-    "url": "https://github.com/zenorocha"
+    "name": "Cees-Willem Hofstede",
+    "email": "ceeswillem@gmail.com",
+    "url": "https://github.com/SeeDoubleYou"
   },
-  "homepage": "http://jqueryboilerplate.com",
+  "homepage": "http://seedoubleyou.nl",
   "contributors": [
     {
-      "name": "Zeno Rocha",
-      "email": "zno.rocha@gmail.com",
-      "url": "https://github.com/zenorocha"
-    },
-    {
-      "name": "Addy Osmani",
-      "email": "addyosmani@gmail.com",
-      "url": "https://github.com/addyosmani"
-    },
-    {
-      "name": "Helder Santana",
-      "email": "heldr@me.com",
-      "url": "https://github.com/heldr"
+      "name": "Cees-Willem Hofstede",
+      "email": "ceeswillem@gmail.com",
+      "url": "https://github.com/SeeDoubleYou"
     }
   ],
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
-    "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
