--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-tocanvas",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "A jquery plugin to overlay any img with a canvas to add effects to it",
   "keywords": [
     "jquery-plugin",
     "jquery",
@@ -29,12 +29,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
+    "bower": "^1.3.12",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "travis": "^0.1.1"
   },
   "scripts": {
     "test": "grunt travis --verbose"
