--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "grunt-contrib-jshint": "^0.11.1",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-jsdoc": "^0.5.8",
+    "grunt-jsdox": "^0.1.7",
     "travis": "^0.1.1"
   },
   "scripts": {
